--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Random Quote Machine</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Randomly generate motivation and productivity themed quotes from an extensive, handpicked list.">
+    <meta property="og:description" content="Randomly generate motivation and productivity themed quotes from an extensive, handpicked list.">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
